--- a/src/views/templates/alert.ejs
+++ b/src/views/templates/alert.ejs
@@ -1,6 +1,6 @@
 <div id="alert-container">
   <% if (message ) { %>
-  <p id="alert" class="alert">
+  <p id="alert" className="alert">
     <%= message %>
   </p>
   <% } else { %>
