--- a/src/views/templates/auth/login.ejs
+++ b/src/views/templates/auth/login.ejs
@@ -1,18 +1,18 @@
 <div id="login-page-container">
   <div id="login-page-content">
-    <div class="section-title">
-      <h1 class="text-white">Ingresa</h1>
+    <div className="section-title">
+      <h1 className="text-white">Ingresa</h1>
     </div>
 
-    <form action="/api/login" method="post" class="vertical-form">
+    <form action="/api/login" method="post" className="vertical-form">
       <input type="text" name="username" placeholder="Nombre de Usuario" />
       <input type="password" name="password" placeholder="contraseña" />
       <input type="submit" value="Login" />
     </form>
-    <div class="links-container">
-      <p><a class="text-white" href="/api/signup">No tengo cuenta aún.</a></p>
+    <div className="links-container">
+      <p><a className="text-white" href="/api/signup">No tengo cuenta aún.</a></p>
       <p>
-        <a class="text-white" href="/api/forgot-password"
+        <a className="text-white" href="/api/forgot-password"
           >Olvidaste tu contraseña ?</a
         >
       </p>
