--- a/src/views/templates/auth/signup.ejs
+++ b/src/views/templates/auth/signup.ejs
@@ -1,10 +1,10 @@
 <div id="signup-page-container">
     <div id="signup-content-container">
-        <div class="section-title">
-            <h1 class="text-white">Registrate</h1>
+        <div className="section-title">
+            <h1 className="text-white">Registrate</h1>
         </div>
 
-        <form action="/api/signup" method="post" class="vertical-form">
+        <form action="/api/signup" method="post" className="vertical-form">
             <label for="username"></label>
             <input type="text" id="username" name="username" placeholder="Nombre de Usuario" required>
             <label for="name"></label>
@@ -17,8 +17,8 @@
             <input type="submit" value="Signup">
         </form>
 
-        <div class="links-container">
-            <p c><a class="text-white" href="/api/login">Ya estoy registrado.</a></p>
+        <div className="links-container">
+            <p c><a className="text-white" href="/api/login">Ya estoy registrado.</a></p>
         </div>
     </div>
 </div>
