--- a/src/views/templates/blog/blogCreate.ejs
+++ b/src/views/templates/blog/blogCreate.ejs
@@ -4,7 +4,7 @@
 
 <div id="create-blog-container">
   
-<h1 class="section-title">
+<h1 className="section-title">
   <%= title %>
 </h1>
 <div>
@@ -31,7 +31,7 @@
 
     <!-- Display error message -->
     <% if (errorMessage) { %>
-      <p class="bg-red">
+      <p className="bg-red">
         <%= errorMessage %>
       </p>
     <% } %>
