--- a/src/views/templates/courseCreate/courseCreate.ejs
+++ b/src/views/templates/courseCreate/courseCreate.ejs
@@ -1,6 +1,6 @@
 <div id="create-course-container">
     
-    <h1 class="section-title">Create New Course</h1>
+    <h1 className="section-title">Create New Course</h1>
     <div>
         <form id="courseForm" action="/api/course/create" method="POST" enctype="multipart/form-data">
             <!-- Form action should match the route for creating a course -->
