--- a/src/views/templates/courseCreate/courseModules.ejs
+++ b/src/views/templates/courseCreate/courseModules.ejs
@@ -6,10 +6,10 @@
         </h1>
         <h3>Add a video</h3>
         <div id="moduleFields">
-            <div class="moduleField">
+            <div className="moduleField">
                 
                 <label for="video_link">Video Link:</label><br>
-                <input type="text" class="video_link" name="video_link"><br><br>
+                <input type="text" className="video_link" name="video_link"><br><br>
             </div>
         </div>
         
