--- a/src/views/templates/courseUpdate/courseUpdate.ejs
+++ b/src/views/templates/courseUpdate/courseUpdate.ejs
@@ -1,6 +1,6 @@
 <div id="update-course-container">
     
-    <h1 class="section-title">Edit Course</h1>
+    <h1 className="section-title">Edit Course</h1>
     <form id="courseEditForm" action="/api/course/<%= course.id %>/update" method="POST"
         enctype="multipart/form-data">
         <label for="title">Title:</label><br>
