--- a/src/views/templates/home.ejs
+++ b/src/views/templates/home.ejs
@@ -16,24 +16,24 @@
   });
 </script>
 
-<div class="home-page-container">
+<div className="home-page-container">
   <!-- hero -->
-<div class="hero-container home-hero">
-  <img class="hero-logo" src="images/white-logo-buonavibra.png" alt="">
+<div className="hero-container home-hero">
+  <img className="hero-logo" src="images/white-logo-buonavibra.png" alt="">
 </div>
 
 <!-- about -->
-<div class="container about" id="about1">
-  <h1 class="section-title">Acerca de.</h1>
+<div className="container about" id="about1">
+  <h1 className="section-title">Acerca de.</h1>
 
-  <div class="row">
-    <div class="col-md-6 text-center">
-      <img src="images/me-about.jpg" style="max-width: 300px; height: auto;" class="shadow-2xl rounded-circle w-100"
+  <div className="row">
+    <div className="col-md-6 text-center">
+      <img src="images/me-about.jpg" style="max-width: 300px; height: auto;" className="shadow-2xl rounded-circle w-100"
         alt="Marcela Marzetti Gimenez">
-      <h3 class="mt-3 font-weight-bold highlight-txt">Marcela Marzetti</h3>
+      <h3 className="mt-3 font-weight-bold highlight-txt">Marcela Marzetti</h3>
     </div>
-    <div class="col-md-6 text-center">
-      <p class="text-xl"><span>¡Bienvenido/a a mi página web!<br><br></span>
+    <div className="col-md-6 text-center">
+      <p className="text-xl"><span>¡Bienvenido/a a mi página web!<br><br></span>
         Mi nombre es Marcela Marzetti y soy una persona como tú, transitando esta experiencia humana aquí en la Tierra.
         Soy
         licenciada en administración de empresas y he dedicado gran parte de mi vida a gestionar negocios. Sin embargo,
@@ -58,19 +58,19 @@
 </div>
 
 <!-- contact -->
-<div id="contact" class="bg-cover bg-center bg-brightness-50 py-6 h-50vh mt-310px md:m-auto md:mt-50px">
- <div class="">
+<div id="contact" className="bg-cover bg-center bg-brightness-50 py-6 h-50vh mt-310px md:m-auto md:mt-50px">
+ <div className="">
    
-  <div class="">
-    <h1 class="section-title italic font-bold text-white">Contacto.</h1>
+  <div className="">
+    <h1 className="section-title italic font-bold text-white">Contacto.</h1>
 
     <!-- Row for contact icons -->
-    <div class="row mt-4 container">
-      <div class="col backdrop-filter p-4 rounded col-md-6 mx-auto d-flex justify-content-between">
-        <div class="list-unstyled d-flex justify-content-between">
-          <a href="https://wa.me/2615996913" target="_blank"><img class="icon" src="images/whatsapp-white-icon.png"
+    <div className="row mt-4 container">
+      <div className="col backdrop-filter p-4 rounded col-md-6 mx-auto d-flex justify-content-between">
+        <div className="list-unstyled d-flex justify-content-between">
+          <a href="https://wa.me/2615996913" target="_blank"><img className="icon" src="images/whatsapp-white-icon.png"
               alt="WhatsApp"></a>
-          <a href="https://www.instagram.com/buonavibra_?igsh=MWR5NDhiZHd3MjY5MA==" target="_blank"><img class="icon"
+          <a href="https://www.instagram.com/buonavibra_?igsh=MWR5NDhiZHd3MjY5MA==" target="_blank"><img className="icon"
               src="images/instagram-white-icon.png" alt="Instagram"></a>
         </div>
       </div>
@@ -78,23 +78,23 @@
   </div>
 
   <!-- contact form -->
-  <div class="row mt-4">
-    <div class="col rounded">
+  <div className="row mt-4">
+    <div className="col rounded">
       <form action="/send-email" method="POST">
-        <h3 class="highlight-txt">Contactar por Email.</h3>
-        <div class="mb-3">
-          <label for="name" class="form-label">Nombre</label>
-          <input type="text" class="form-control" id="name" name="name">
+        <h3 className="highlight-txt">Contactar por Email.</h3>
+        <div className="mb-3">
+          <label for="name" className="form-label">Nombre</label>
+          <input type="text" className="form-control" id="name" name="name">
         </div>
-        <div class="mb-3">
-          <label for="email" class="form-label">Correo Electrónico</label>
-          <input type="email" class="form-control" id="email" name="email">
+        <div className="mb-3">
+          <label for="email" className="form-label">Correo Electrónico</label>
+          <input type="email" className="form-control" id="email" name="email">
         </div>
-        <div class="mb-3">
-          <label for="message" class="form-label">Mensaje</label>
-          <textarea class="form-control" id="message" rows="3" name="msg"></textarea>
+        <div className="mb-3">
+          <label for="message" className="form-label">Mensaje</label>
+          <textarea className="form-control" id="message" rows="3" name="msg"></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
+        <button type="submit" className="btn btn-primary">Enviar</button>
       </form>
       
     </div>
