--- a/src/views/templates/auth/emailSent.ejs
+++ b/src/views/templates/auth/emailSent.ejs
@@ -1,5 +1,5 @@
-<div class="container email-sent-cont">
-    <h1 class="section-title">Email sent!</h1>
+<div className="container email-sent-cont">
+    <h1 className="section-title">Email sent!</h1>
     <br>
     <p>Check your email Inbox to get the recovery code.</p>
 </div>
