--- a/src/views/templates/auth/forgotPassword.ejs
+++ b/src/views/templates/auth/forgotPassword.ejs
@@ -1,13 +1,13 @@
 <!-- forgotPassword.ejs -->
 <div id="forgot-password-container">
-  <h1 class="section-title"><%= titles %></h1>
+  <h1 className="section-title"><%= titles %></h1>
   <% if (subtitle) { %>
-  <p class="subtitle"><%= subtitle %></p>
+  <p className="subtitle"><%= subtitle %></p>
   <% } %>
   <form method="POST" action="<%= formAction %>" enctype="multipart/form-data">
     <% for(let i=0; i < fields.length; i++) { %> <% if (fields[i] !=='avatar' )
     { %><!--avatar is for userUpdate template-->
-    <label for="<%= fields[i] %>" class="label"> <%= labels[i] %> </label>
+    <label for="<%= fields[i] %>" className="label"> <%= labels[i] %> </label>
     <input
       type="text"
       id="<%= fields[i] %>"
@@ -17,9 +17,9 @@
     /><br />
     <% } %> <% } %> <% if (fields.includes('avatar')) { %>
     <!-- Check if avatar field exists -->
-    <label for="avatar" class="label-avatar">Avatar:</label><br />
-    <div class="avatar-uploader">
-      <img src="<%=user.avatar%>" class="avatar-profile" alt="user-avatar" />
+    <label for="avatar" className="label-avatar">Avatar:</label><br />
+    <div className="avatar-uploader">
+      <img src="<%=user.avatar%>" className="avatar-profile" alt="user-avatar" />
       <input type="file" id="avatar" name="avatar" /><br /><br />
     </div>
     <% } %>
