--- a/src/views/templates/blog/blogDetail.ejs
+++ b/src/views/templates/blog/blogDetail.ejs
@@ -2,17 +2,17 @@
 <!-- ========================================================= -->
 <div id="blog-detail-container">
   <!-- thumbnail -->
-  <div class="thumbnail mb-4">
-    <img src="<%= blog.thumbnail %>" class="img-fluid shadow-lg" alt="blog thumbnail" />
+  <div className="thumbnail mb-4">
+    <img src="<%= blog.thumbnail %>" className="img-fluid shadow-lg" alt="blog thumbnail" />
   </div>
   <div></div>
 
   <!-- blog info -->
-  <p id="blog-info" class="text-muted">
+  <p id="blog-info" className="text-muted">
     <span> <%= blog.updated_at %></span>
     <span
       ><img
-        class="avatar ms-4 me-2"
+        className="avatar ms-4 me-2"
         src="<%= blog.author.avatar %>"
         alt="author_avatar"
     /></span>
@@ -20,22 +20,22 @@
     <span> <%= blog.author.name %> </span>
     <!-- blog actions -->
     <% if (user && user.role==="admin" ) { %>
-    <span class="course-admin-options opacity-50">
-      <button class="btn">
+    <span className="course-admin-options opacity-50">
+      <button className="btn">
         <p>
           <a
             id="edit-btn"
             href="/api/blog/<%= blog.id %>/update?blogId=<%= blog.id %>"
-            ><i class="fas fa-edit me-2"></i
+            ><i className="fas fa-edit me-2"></i
           ></a>
         </p>
       </button>
-      <button class="btn">
+      <button className="btn">
         <p>
           <a
-            class="delete-btn"
+            className="delete-btn"
             href="/api/blog/<%= blog.id %>/delete?blogId=<%= blog.id %>"
-            ><i class="fas fa-trash-alt me-2"></i
+            ><i className="fas fa-trash-alt me-2"></i
           ></a>
         </p>
       </button>
@@ -45,9 +45,9 @@
 
   <!-- blog content -->
   <div>
-    <h1 class="fw-bolder text-uppercase blog-title"><%= blog.title %></h1>
+    <h1 className="fw-bolder text-uppercase blog-title"><%= blog.title %></h1>
   </div>
-  <h3 class=""><%= blog.description %></h3>
+  <h3 className=""><%= blog.description %></h3>
   <hr />
   <div id="text_content">
     <!-- Ensure to use <%- %> to render HTML unescaped / NOT <%= %> -->
