--- a/src/views/templates/blog/blogList.ejs
+++ b/src/views/templates/blog/blogList.ejs
@@ -1,11 +1,11 @@
-<div class="blogs-page-container">
-  <div class="blogs-container">
-    <div class="section-title1">
-      <h1 class="text-white"><%= title %></h1>
+<div className="blogs-page-container">
+  <div className="blogs-container">
+    <div className="section-title1">
+      <h1 className="text-white"><%= title %></h1>
     </div>
 
     <!-- pagination top -->
-    <div class="pagination">
+    <div className="pagination">
       <% if (page && page> 1) { %>
       <a href="/api/<%= route %>?page=<%= page - 1 %>&perPage=<%= perPage %>"
         >Previous</a
@@ -14,7 +14,7 @@
       && blogs.length===0)) { %>
       <a
         href="/api/<%= route %>?page=<%= i %>&perPage=<%= perPage %>"
-        class="<%= currentPage === i ? 'active' : '' %>"
+        className="<%= currentPage === i ? 'active' : '' %>"
       >
         <%= i %>
       </a>
@@ -26,43 +26,43 @@
     </div>
 
     <!-- blogs -->
-    <div class="blogs-grid">
+    <div className="blogs-grid">
       <% blogs.forEach((blog, index)=> { %>
-      <div class="blog-item backdrop-filter shadow-lg">
+      <div className="blog-item backdrop-filter shadow-lg">
         <a href="<%= blog.next %>">
           <img src="<%= blog.thumbnail %>" alt="thumbnail-<%= blog.slug %>" />
-          <p class="timestamp text-white"><%= blog.updated_at %></p>
-          <div class="author">
+          <p className="timestamp text-white"><%= blog.updated_at %></p>
+          <div className="author">
             <img
               src="<%= blog.author.avatar %>"
               alt="User Avatar"
-              class="avatar"
+              className="avatar"
             />
-            <p class="author-info text-white">
+            <p className="author-info text-white">
               <strong> <%= blog.author.username %> </strong> •
               <%=blog.author.name%>
             </p>
           </div>
-          <h2 class="text-white"><%= blog.title %></h2>
+          <h2 className="text-white"><%= blog.title %></h2>
 
           <!-- limit description 50 words -->
           <% let descriptionWords=blog.description.split(' '); %> <% let
           limitedDescription = descriptionWords.slice(0, 50).join(' '); %>
-          <p class="text-white"><%= limitedDescription %></p>
+          <p className="text-white"><%= limitedDescription %></p>
         </a>
         <% if (isAdmin) {%>
-        <div class="blog-actions text-white">
+        <div className="blog-actions text-white">
           <p>
-            <a class="text-muted" href="/api/blog/<%= blog.id %>/update"
-              ><i class="fas fa-edit me-2"></i>
+            <a className="text-muted" href="/api/blog/<%= blog.id %>/update"
+              ><i className="fas fa-edit me-2"></i>
             </a>
             <input type="hidden" name="author" value="<%= blog.author %>" />
           </p>
           <p>
             <a
-              class="text-muted"
+              className="text-muted"
               href="/api/blog/<%= blog.id %>/delete?blogId=<%= blog.id %>"
-              ><i class="fas fa-trash-alt me-2"></i
+              ><i className="fas fa-trash-alt me-2"></i
             ></a>
           </p>
         </div>
@@ -70,6 +70,6 @@
       </div>
       <% if ((index + 1) % 4===0 && index !==blogs.length - 1) { %>
     </div>
-    <div class="blogs-grid"><% } %> <% }); %></div>
+    <div className="blogs-grid"><% } %> <% }); %></div>
   </div>
 </div>
