--- a/src/views/templates/courseOverview.ejs
+++ b/src/views/templates/courseOverview.ejs
@@ -1,6 +1,6 @@
-<div class="course-container">
-    <div class="course-overview mt-4">
-        <div class="section-title2">
+<div className="course-container">
+    <div className="course-overview mt-4">
+        <div className="section-title2">
             <h1>Course Overview</h1>
         </div>
         <hr>
@@ -13,14 +13,14 @@
         <p>
             <%= course.description %>
         </p>
-        <div class="course-details">
+        <div className="course-details">
             <p>Instructor: <%= course.instructor %></p>
-            <p>Price: <span class="price-usd">USD<%= course.usd_price %></span> | <span class="price-ars">ARS<%= course.ars_price %></span></p>
+            <p>Price: <span className="price-usd">USD<%= course.usd_price %></span> | <span className="price-ars">ARS<%= course.ars_price %></span></p>
         </div>
         <br>
-        <div class='payment-options'>
+        <div className='payment-options'>
             <button>
-                <a class="text-white" href="/api/course/<%= course.id %>/enroll">Enroll</a>
+                <a className="text-white" href="/api/course/<%= course.id %>/enroll">Enroll</a>
             </button>
         </div>
     </div>
