--- a/src/views/templates/courseUpdate/courseModuleUpdate.ejs
+++ b/src/views/templates/courseUpdate/courseModuleUpdate.ejs
@@ -8,12 +8,12 @@
         </h1>
         <h3>Change course video</h3>
         <div id="moduleFields">
-            <div class="moduleField">
+            <div className="moduleField">
                 <div id="moduleFields">
-                    <div class="moduleField">
+                    <div className="moduleField">
 
                         <label for="video_link">Video Link:</label><br>
-                        <input type="text" class="video_link" name="video_link" value="<%= module.video_link %>"><br><br>
+                        <input type="text" className="video_link" name="video_link" value="<%= module.video_link %>"><br><br>
                     </div>
                 </div>
             </div>
