--- a/src/views/templates/courses.ejs
+++ b/src/views/templates/courses.ejs
@@ -1,11 +1,11 @@
-<div class="courses-page-container">
-  <div class="courses-container">
-    <div class="section-title z-index-1">
-      <h1 class="text-white"><%= title %></h1>
+<div className="courses-page-container">
+  <div className="courses-container">
+    <div className="section-title z-index-1">
+      <h1 className="text-white"><%= title %></h1>
     </div>
 
     <!-- pagination top -->
-    <div class="pagination">
+    <div className="pagination">
       <% if (page && page> 1) { %>
       <a href="/api/<%= route %>?page=<%= page - 1 %>&perPage=<%= perPage %>"
         >Previous</a
@@ -14,7 +14,7 @@
       && courses.length===0)) { %>
       <a
         href="/api/<%= route %>?page=<%= i %>&perPage=<%= perPage %>"
-        class="<%= currentPage === i ? 'active' : '' %>"
+        className="<%= currentPage === i ? 'active' : '' %>"
       >
         <%= i %>
       </a>
@@ -26,30 +26,30 @@
     </div>
 
     <!-- courses -->
-    <div class="courses-grid">
+    <div className="courses-grid">
       <% courses.forEach((course, index)=> { %>
-      <div class="course-item backdrop-filter shadow-lg">
+      <div className="course-item backdrop-filter shadow-lg">
         <a href="<%= course.next %>">
           <img
             src="<%= course.thumbnail %>"
             alt="thumbnail-<%= course.slug %>"
           />
-          <p class="timestamp text-white"><%= course.updated_at %></p>
-          <div class="author">
+          <p className="timestamp text-white"><%= course.updated_at %></p>
+          <div className="author">
             <img
               src="<%= course.author.avatar %>"
               alt="User Avatar"
-              class="avatar"
+              className="avatar"
             />
-            <p class="author-info text-white">
+            <p className="author-info text-white">
               <strong> <%= course.author.username %> </strong> •
               <%=course.author.name%>
             </p>
           </div>
-          <h2 class="text-white"><%= course.title %></h2>
+          <h2 className="text-white"><%= course.title %></h2>
 
           <% if (course.usd_price || course.usd_price ) {%>
-          <p class="text-white">
+          <p className="text-white">
             USD <%= course.usd_price %> | ARS <%= course.ars_price %>
           </p>
           <% } %>
@@ -57,22 +57,22 @@
           <!-- limit description 50 words -->
           <% let descriptionWords=course.description.split(' '); %> <% let
           limitedDescription = descriptionWords.slice(0, 50).join(' '); %>
-          <p class="text-white"><%= limitedDescription %></p>
+          <p className="text-white"><%= limitedDescription %></p>
           
         </a>
         <% if (isAdmin) {%>
-        <div class="course-actions">
-          <p class="text-white">
-            <a class="text-muted" href="/api/course/<%= course.id %>/update"
-              ><i class="fas fa-edit me-2"></i
+        <div className="course-actions">
+          <p className="text-white">
+            <a className="text-muted" href="/api/course/<%= course.id %>/update"
+              ><i className="fas fa-edit me-2"></i
             ></a>
             <input type="hidden" name="author" value="<%= course.author %>" />
           </p>
           <p>
             <a
-              class="text-muted"
+              className="text-muted"
               href="/api/course/<%= course.id %>/delete?courseId=<%= course.id %>"
-              ><i class="fas fa-trash-alt me-2"></i
+              ><i className="fas fa-trash-alt me-2"></i
             ></a>
           </p>
         </div>
@@ -80,6 +80,6 @@
       </div>
       <% if ((index + 1) % 4===0 && index !==courses.length - 1) { %>
     </div>
-    <div class="courses-grid"><% } %> <% }); %></div>
+    <div className="courses-grid"><% } %> <% }); %></div>
   </div>
 </div>
