--- a/src/views/templates/footer.ejs
+++ b/src/views/templates/footer.ejs
@@ -1,14 +1,14 @@
-<footer class="bg-dark text-white py-5" id="footer">
+<footer className="bg-dark text-white py-5" id="footer">
     <div>
-      <div class="row">
-        <div class="col-md-4">
-            <img class="footer-icon" src="/images/white-logo-buonavibra.png" alt="">
+      <div className="row">
+        <div className="col-md-4">
+            <img className="footer-icon" src="/images/white-logo-buonavibra.png" alt="">
           <h5>Acerca</h5>
           <p>Bienvenidos a mi espacio de bienestar! quiero que recorramos juntos el camino del Kundalini Yoga.</p>
         </div>
-        <div class="col-md-4">
+        <div className="col-md-4">
           <h5>Links</h5>
-          <ul class="list-unstyled">
+          <ul className="list-unstyled">
             <li><a href="/">Home</a></li>
             <li><a href="/#about">Acerca</a></li>
             <li><a href="api/courses?page=1&perPage=6">courses</a></li>
@@ -16,13 +16,13 @@
             <li><a href="/#contact">Contact</a></li>
           </ul>
         </div>
-        <div class="col-md-4">
+        <div className="col-md-4">
           <h5>Contacto</h5>
           <p>Email: buonavibraclub@gmail.com<br>Phone: +549 2615 996913</p>
         </div>
       </div>
-      <hr class="my-4">
-      <p class="text-center">© 2024 buonavibra. All rights reserved.</p>
+      <hr className="my-4">
+      <p className="text-center">© 2024 buonavibra. All rights reserved.</p>
     </div>
   </footer>
   
