--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -1,59 +1,59 @@
-<nav class="navbar navbar-expand-lg bg-body-dark">
-  <div class="container-fluid">
-    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+<nav className="navbar navbar-expand-lg bg-body-dark">
+  <div className="container-fluid">
+    <!-- <a className="navbar-brand" href="#">Navbar</a> -->
+    <button className="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span className="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+    <div className="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul className="navbar-nav">
 
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/"><i class="fas fa-home"> Home</i></a>
+        <li className="nav-item">
+          <a className="nav-link active" aria-current="page" href="/"><i className="fas fa-home"> Home</i></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/api/courses?page=1&perPage=6"><i class="fas fa-book"></i> Cursos</a>
+        <li className="nav-item">
+          <a className="nav-link" href="/api/courses?page=1&perPage=6"><i className="fas fa-book"></i> Cursos</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/api/blog?page=1&perPage=6"><i class="fas fa-book"></i> Blog</a>
+        <li className="nav-item">
+          <a className="nav-link" href="/api/blog?page=1&perPage=6"><i className="fas fa-book"></i> Blog</a>
         </li>
 
         <!-- signedin links -->
         <% if (user && user.name) { %>
-        <li class="nav-item">
-          <a class="nav-link" href="/api/courses-owned?page=1&perPage=6"><i class="fas fa-graduation-cap"></i> Mis Cursos</a>
+        <li className="nav-item">
+          <a className="nav-link" href="/api/courses-owned?page=1&perPage=6"><i className="fas fa-graduation-cap"></i> Mis Cursos</a>
         </li>
 
         <!-- MAIN DROPDOWN -->
         <!-- admin links -->
         <% if (user && user.role==="admin" ) { %>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="fas fa-ellipsis-v"></i> <!-- Three dots icon -->
+        <li className="nav-item dropdown">
+          <a className="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i className="fas fa-ellipsis-v"></i> <!-- Three dots icon -->
           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/api/course/create"><i class="fas fa-plus-circle"></i> Crear
+          <ul className="dropdown-menu">
+            <li><a className="dropdown-item" href="/api/course/create"><i className="fas fa-plus-circle"></i> Crear
                 curso</a></li>
-            <li><a class="dropdown-item" href="/api/blog/create"><i class="fas fa-plus-circle"></i> Crear
+            <li><a className="dropdown-item" href="/api/blog/create"><i className="fas fa-plus-circle"></i> Crear
                 Blog</a></li>
-            <li><a class="dropdown-item" href="/api/admin/users"><i class="fas fa-users-cog"></i> Panel de Usuarios</a>
+            <li><a className="dropdown-item" href="/api/admin/users"><i className="fas fa-users-cog"></i> Panel de Usuarios</a>
             </li>
             <% if (user && user.avatar) { %>
             <!-- Update Profile with user's avatar -->
-            <li><a class="dropdown-item" href="/api/user-update/<%= user.id %>/confirm">
-                <img src="<%= user.avatar %>" alt="User Avatar" class="avatar">
+            <li><a className="dropdown-item" href="/api/user-update/<%= user.id %>/confirm">
+                <img src="<%= user.avatar %>" alt="User Avatar" className="avatar">
                 Editar Perfil
               </a></li>
             <% } else { %>
             <!-- If no avatar, use a placeholder -->
-            <li><a class="dropdown-item" href="/api/user-update/<%= user.id %>/confirm">
-                <img src="images/user.png" alt="Placeholder Avatar" class="avatar">
+            <li><a className="dropdown-item" href="/api/user-update/<%= user.id %>/confirm">
+                <img src="images/user.png" alt="Placeholder Avatar" className="avatar">
                 Editar Perfil
               </a></li>
             <% } %>
             <!-- sign out -->
             <% if (user) { %>
-            <li><a class="dropdown-item" href="/api/logout">
-                <i class="fas fa-sign-out-alt"></i>
+            <li><a className="dropdown-item" href="/api/logout">
+                <i className="fas fa-sign-out-alt"></i>
                 Salir
               </a></li>
             <% } %>
@@ -66,12 +66,12 @@
         <!-- ----------------------------------------------------------------------- -->
         <% } else { %>
         <!-- sign in -->
-        <li class="nav-item">
-          <a class="nav-link" href="/api/login"><i class="fas fa-graduation-cap"></i><i class="fas fa-sign-in-alt"></i> Ingresar</a>
+        <li className="nav-item">
+          <a className="nav-link" href="/api/login"><i className="fas fa-graduation-cap"></i><i className="fas fa-sign-in-alt"></i> Ingresar</a>
         </li>
         <!-- sign up -->
-        <li class="nav-item">
-          <a class="nav-link" href="/api/signup"><i class="fas fa-graduation-cap"></i><i class="fas fa-user-plus"></i> Registrar</a>
+        <li className="nav-item">
+          <a className="nav-link" href="/api/signup"><i className="fas fa-graduation-cap"></i><i className="fas fa-user-plus"></i> Registrar</a>
         </li>
         <% } %>
 
