--- a/client/src/public/css/layout/navbar.css
+++ b/client/src/public/css/layout/navbar.css
@@ -108,7 +108,7 @@
 }
 
 .dropdown-menu a {
-  color: #fff;
+  color: #000;
   padding: 6px 16px;
   text-decoration: none;
   display: inline-block;
