--- a/client/src/public/css/course/courseEnroll.css
+++ b/client/src/public/css/course/courseEnroll.css
@@ -73,6 +73,7 @@ body {
 
 
 .payment-options button {
+    margin-bottom: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
