--- a/client/src/public/css/navigation.css
+++ b/client/src/public/css/navigation.css
@@ -28,10 +28,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, .1);
-  backdrop-filter: blur(50px);
+  background: rgba(0, 0, 0, 0.4); /* Change opacity to your desired value */
   z-index: -1;
 }
+
+.header:hover::before {
+  background: rgba(0, 0, 0, 0.6); /* Change opacity to 0 on hover */
+}
+
 
 .header::after {
   /* moving reflect inside header */
